responsiveness layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body, html {
     }
     .temperature {
       font-size: 2rem;
+      text-shadow:1px 3px rgb(46, 46, 46);
     }
     .icon {
       max-width: 75px;
@@ -43,12 +44,12 @@ body, html {
     .desc{
         font-weight: 600;
         font-size:.75rem;
-        text-shadow:1px 3px rgb(0, 0, 0);
+        text-shadow:1px 3px rgb(46, 46, 46);
     }
     .location{
         font-weight: 600;
         font-size:0.75rem;
-        text-shadow:1px 3px rgb(0, 0, 0);
+        text-shadow:1px 3px rgb(46, 46, 46);
     }
     .navbar-toggler1 {
         color:rgb(204, 200, 200);
@@ -214,9 +215,10 @@ body, html {
         text-align: center;
     }
     .weather {
+
         margin-top: 11rem;
         max-width: 100px;
-        text-align: start;
+        text-align: center;
         
     }
     .icon {
